--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
-AZURE_OAI_ENDPOINT=<endpoint>
-AZURE_OAI_KEY=<key>
-AZURE_OAI_DEPLOYMENT=<deployment_name>
-AZURE_SEARCH_ENDPOINT=<search_endpoint>
-AZURE_SEARCH_KEY=<search_key>
-AZURE_SEARCH_INDEX=<search_index>
+PredictionEndpoint=YOUR_PREDICTION_ENDPOINT
+PredictionKey=YOUR_PREDICTION_KEY
+ProjectID=YOUR_PROJECT_ID
+ModelName=fruit-classifier
